mainpage_stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');

*{
    margin: 0;
    padding: 0;
}
body{
    font-family: "Roboto", sans-serif;
    background-color: white;
}

html{
    scroll-behavior: smooth;
}
#header{
    z-index: 1001;
    
}
/* Nav Bar and logo */
.logo_banner{
    display: block;
    width: 100vw;
    height: auto;
    text-align: center;
    padding: 1vh;
   
}
.logo_banner h1{
    padding-bottom: 1vh;
    color: whitesmoke;
}
.logo_banner h4{
    padding-bottom: 0.5vh;
    color: white;
}
.nav_bar{
    display: flex;
    width: 100vw;
    height: 6vh;
    top: 0;
    position: sticky;
    justify-content: center;
    padding-top: 0.5vh;
    padding-bottom: 0.5vh;
    background-color: transparent;
    z-index: 1000;
}

.nav_list{
    display: flex;
    min-width: 44%;
    max-width: fit-content;
    height: 100%;
    justify-content: space-evenly;
    background:  #e9ecef;
    border-radius: 50px;
    gap: 5px;
}

.nav_list a{
    text-decoration: none;
    color: black;
    font-size: 1.25rem;  
}
.nav_list a:hover{
    color: #FF2400;
}
.nav_list li{
    list-style: none;
    align-self: center;
    
}
/* End Navigation styling */

/* Content containers */

/* main header */
.main_content_header{
    display: flex;
    justify-content: center;
    padding-top: 3rem;
    padding-bottom: 3rem;
    font-size: 2rem;
    position: relative;
    text-align: center;
}
.main_content_header::before, .main_content_header::after{
    content: "";
    flex-grow: 1;
    height: 1px;
    background-color: #383838;
    margin: 0 3rem;
    align-self: center;
}

.home_page{
    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url(main_assets/Team\ Photos/people\ talking.png);
    background-size: cover;
    background-position: center;
    min-height: 100vh;
    
}

